Archive2/40/1a3908be197324/output
main.cpp:24:5: error: call to 'mag' is ambiguous
    mag(a);
    ^~~
main.cpp:19:6: note: candidate function
void mag(const B<int>& p);
     ^
main.cpp:20:6: note: candidate function
void mag(const B<float>& p);
     ^
1 error generated.
